--- a/_config.yml
+++ b/_config.yml
@@ -7,11 +7,11 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Camille Pawlak"
+title                    : "Joan Chimezie"
 title_separator          : "-"
-name                     : &name "Cami"
+name                     : &name "Joan"
 description              : &description "Biogeographer"
-url                      : https://camipawlak.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://joanchimezie.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
