--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   school           : "UCLA"
   employer         :
   pubmed           : 
-  googlescholar    : ""
+  googlescholar    : 
   email            : "jchimezie@g.ucla.edu"
   researchgate     :  
   uri              :
@@ -97,7 +97,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : ""
+  github           : 
   google_plus      :
   keybase          :
   instagram        :
