--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Joan Chimezie"
-  avatar           : "joan-profile.png"
+  avatar           : "joan-profile.jpeg"
   bio              : "Geography PhD Student at UCLA. Paleoecology, Paleoclimatology, Wildfires, Policies"
   location         : "Los Angeles, California"
   school           : "UCLA"
