--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,10 +1,7 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
-
-  - title: "Presentations"
-    url: /presentations/    
+  - title: "Talks and Posters"
+    url: /talks/
 
   - title: "Teaching and Mentoring"
     url: /teaching/    
